--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,32 +6,19 @@ on:
       - main
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      id-token: write
     steps:
-      # Шаг 1: Проверить репозиторий
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Шаг 2: Установить Node.js
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      # Setup .npmrc file to publish to npm
+      - uses: actions/setup-node@v4
         with:
-          node-version: 16  # Укажите версию Node.js, используемую в проекте
-          cache: 'npm'
-
-      # Шаг 3: Установить зависимости
-      - name: Install dependencies
-        run: npm ci
-
-      # Шаг 4: Проверить, что всё корректно
-      - name: Run tests
-        run: npm test
-
-      # Шаг 5: Опубликовать в NPM
-      - name: Publish to NPM
-        run: npm publish
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
+      - run: npm ci
+      - run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
