--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "rollup-plugin-typescript2": "^0.35.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
+  },
+  "repository": {
+  "url":"https://github.com/aberforth4/npm-package-tutorial"
   }
 }
