--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-simple-test-npm-package",
-  "version": "1.0.1",
+  "name": "@test-org111111/my-simple-test-npm-package",
+  "version": "2.0.1",
   "description": "my npm package",
   "main": "dist/index.js",
   "scripts": {
